fix alignment of leaders

--- a/src/pymash/templates/static/pymash.scss
+++ b/src/pymash/templates/static/pymash.scss
@@ -13,6 +13,14 @@ $table-cell-padding: 0.5em 0.75em 0.5em 0;
   width: 100%;
 }
 
+.table td:last-child {
+  text-align: right;
+}
+
+.leaders-wrapper {
+  padding: 0 1em;
+}
+
 //todo: fix css according to note in
 //https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/ #}
 body {
